# platform.upstream.SDL

./: CMakeLists.txt  Makefile.in  SDL-1.2.15.tar.gz.delta  SDL-1.2.15.tar.gz.id  configure  configure.in  project.config
Tizen_SDL_Test/: CMakeLists.txt  README  SDL2-2.0.4-2.armv7l.rpm
Tizen_SDL_Test/include/: SDL_config.h  SDL_config.h.cmake
Tizen_SDL_Test/include/GLES3/: gl3.h  gl32.h
Tizen_SDL_Test/lib/: libGLESv1_CM.so.1.1  libGLESv2.so.2.0
Tizen_SDL_Test/packaging/: sdl_test.spec
Tizen_SDL_Test/src/: testmain.c  testmain.h
Tizen_SDL_Test/src/common/: SDL_test_common.c  SDL_test_log.c
Tizen_SDL_Test/src/test/: loopwave.c  loopwavequeue.c  testatomic.c  testaudiohotplug.c  testaudioinfo.c  testautomation.c  testautomation_events.c  testdisplayinfo.c  testdraw2.c  testdrawchessboard.c  testdropfile.c  testerror.c  testfile.c  testfilesystem.c  testgles.c  testgles2.c  testhittesting.c  testhotplug.c  testiconv.c  testime.c  testintersections.c  testkeys.c  testloadso.c  testlock.c  testmessage.c  testmultiaudio.c  testnative.c  testoverlay2.c  testplatform.c  testpower.c  testrelative.c  testrendercopyex.c  testrendertarget.c  testresample.c  testrumble.c  testscale.c  testsem.c  testshader.c  testshape.c  testsprite2.c  (+7 more)
autom4te.cache/: output.0  requests  traces.0
cmake/: sdlchecks.cmake
include/: SDL_config.h.cmake  SDL_config.h.in  SDL_config_pandora.h  SDL_events.h  SDL_main.h  SDL_platform.h  SDL_syswm.h  SDL_test_harness.h
packaging/: .SDL2.spec.swp  SDL.changes  SDL.spec  SDL2.spec  baselibs.conf
src/: SDL.c  SDL_log.c
src/core/tizen/: SDL_tizen.c  SDL_tizen.h
src/dynapi/: SDL_dynapi_overrides.h  SDL_dynapi_procs.h
src/events/: SDL_events.c
src/main/tizen/: SDL_tizen_main.c
src/test/: SDL_test_harness.c
src/video/: SDL_sysvideo.h  SDL_video.c
src/video/tizen/: SDL_tizenevents.c  SDL_tizenevents_c.h  SDL_tizenkeyboard.c  SDL_tizenkeyboard.h  SDL_tizenmouse.c  SDL_tizenmouse.h  SDL_tizenopengles.c  SDL_tizenopengles.h  SDL_tizentouch.c  SDL_tizentouch.h  SDL_tizenvideo.c  SDL_tizenvideo.h  SDL_tizenwindow.c  SDL_tizenwindow.h
src/video/wayland/: SDL_waylanddyn.c  SDL_waylanddyn.h  SDL_waylandevents.c  SDL_waylandsym.h  SDL_waylandvideo.c  SDL_waylandvideo.h  SDL_waylandwindow.c  SDL_waylandwindow.h
src/video/x11/: SDL_x11events.c
test/: CMakeLists.txt  configure  loopwave.c  loopwavequeue.c  testatomic.c  testaudiohotplug.c  testaudioinfo.c  testautomation.c  testautomation_audio.c  testautomation_render.c  testautomation_video.c  testdisplayinfo.c  testdraw2.c  testdrawchessboard.c  testdropfile.c  testerror.c  testfile.c  testfilesystem.c  testgles.c  testhittesting.c  testiconv.c  testime.c  testintersections.c  testkeys.c  testloadso.c  testlock.c  testmain.c  testmain.h  testmessage.c  testmultiaudio.c  testoverlay2.c  testpicture.c  testplatform.c  testrelative.c  testrendercopyex.c  testrendertarget.c  testresample.c  testscale.c  testsem.c  testshader.c  (+9 more)
test/common/: SDL_test_common.c  SDL_test_log.c
test/include/: SDL_test_common.h
test/include/EGL/: egl.h  eglext.h  eglplatform.h
test/include/GLES2/: gl2.h
test/include/GLES3/: gl31.h
test/include/KHR/: khrplatform.h
test/packaging/: sdl_test.spec
